apps/pingauthorizepap/base/pingauthorizepap-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: pingauthorizepap
  namespace: ping-gitops

spec:
  replicas: 1

  selector:
    matchLabels:
      app: pingauthorizepap

  template:
    metadata:
      labels:
        app: pingauthorizepap

    spec:

      containers:

      - name: pingauthorizepap

        image: docker.io/pingidentity/pingauthorizepap:latest

        imagePullPolicy: IfNotPresent

        ports:

        - containerPort: 1443
          name: https

        volumeMounts:

        - name: pingauthorizepap-data
          mountPath: /opt/okd-storage/pingauthorizepap

        - name: pingauthorizepap-license
          mountPath: /opt/staging/pd.profile/server-root/pre-setup/PingAuthorize.lic
          subPath: PingAuthorize.lic

      volumes:

      - name: pingauthorizepap-data
        persistentVolumeClaim:
          claimName: pingauthorizepap-data

      - name: pingauthorizepap-license
        secret:
          secretName: pingauthorizepap-license
