apps/pingauthorizepap/base/pingauthorizepap-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: pingauthorizepap
  namespace: ping-gitops

spec:

  selector:
    app: pingauthorizepap

  ports:

  - name: https
    port: 1443
    targetPort: 1443
